<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="13dp"
            android:textStyle="bold"
            android:text="@string/sign_up_title"/>
        <TextView
            android:id="@+id/personalInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="13dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/personal_information_title" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputGivenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Given Name:*"
                android:maxLength="20"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Surname:*"
                android:maxLength="20"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email:*"
                android:inputType="textEmailAddress"
                android:maxLength="50"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/editTextDob"
                android:hint="Date of Birth:*"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Height:*"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/heightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Spinner.Underlined" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Weight:*"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/weightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Spinner.Underlined" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Gender:*"/>
            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male" />
                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/addressInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:text="@string/address_information_title" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address:*"
                android:inputType="text"
                android:maxLength="50"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPostcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Postcode:*"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/postcodeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Spinner.Underlined" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/fitnessInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:text="@string/fitness_information_title" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLevelAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Level of Activity:*"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/levelActSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                style="@style/Widget.AppCompat.Spinner.Underlined" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputStepsPerMile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Steps per mile:*"
                android:inputType="number"
                android:maxLength="6"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/logInInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:text="@string/login_information_title" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="text"
                android:maxLength="10"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPasswordToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/confirmSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm" />

        <TextView
            android:id="@+id/logOutLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:text="@string/link_test"
            android:textColor="@android:color/holo_blue_dark" />
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logOutLink"/>
    </LinearLayout>
</ScrollView>