<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/stepsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="13dp"
                android:textStyle="bold"
                android:text="@string/steps_title" />
            <TextView
                android:id="@+id/addStepsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="13dp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:text="@string/add_steps_title" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputSteps"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Steps:"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add" />
            <TextView
                android:id="@+id/updateStepsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="13dp"
                android:textStyle="bold"
                android:layout_marginTop="90dp"
                android:text="@string/update_steps_title" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Steps Added:" />
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/stepsSpinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textUpdateSteps"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/updateSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="New Steps:"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>